--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@react-three/fiber": "^9.1.2",
     "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/vite": "^4.1.6",
+    "leva": "^0.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
+    "styled-components": "^6.1.18",
     "tailwindcss": "^4.1.6",
     "three": "^0.176.0"
   },
